<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">Save UA</string>
    <string name="pass_and_play">Pass-and-Play</string>
    <string name="play_online">Play Online</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
	
    <string name="select_map">Select map</string>
    <string name="music">Music</string>
    <string name="sound_effects">Sound effects</string>
    <string name="gdx_menu">Gdx menu</string>
    <string name="input_map_name">Input map name</string>
    <string name="input_map_size">Input map size</string>
	
    <string name="cancel">Cancel</string>
    <string name="ok">Apply</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
	
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
	
    <string name="build_map">Build map</string>
    <string name="locate_objects">Locate objects</string>
    <string name="units_gamer">Units gamer</string>
    <string name="free_units">Free units</string>
	
    <string name="min_two_gamers_req">Should be no less\nthan two players.</string>
    <string name="save_map_and_exit">Save map and exit?</string>
    
    <string name="size">Size</string>
    <string name="max_gamers">Maximum gamers</string>
	<string name="count_gamers">Gamers count</string>
		
</resources>
